--- a/css/temite/termite-4.css
+++ b/css/temite/termite-4.css
@@ -46,7 +46,7 @@ body {
     line-height: 1;
 }
 
-.berrett-text {
+.simpson-text {
     font-size: 24px;
     font-weight: bold;
     color: #4a90e2;
@@ -328,7 +328,7 @@ body {
         color: #000;
     }
     
-    .berrett-text {
+    .simpson-text {
         color: #000;
     }
     
